# openinput

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  bootstrap  configure.ac  openinput.pc.in  sinp.pc.in
debian/: README.Debian  changelog  conffiles.ex  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  libopeninput-default.ex  libsinp-default.ex  libsinp-dev.files  libsinp.doc-base.EX  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shlibs.local  watch.ex
doc/: Doxyfile.in  Makefile.am  internal.txt  public.txt  roadmap.txt  todo.txt
doc/api/: intgroups.dox  mainpage.dox  pubgroups.dox
doc/doxygen/: Doxyfile  Doxyfile.in  Makefile.am  footer.html  header.html  intgroups.dox  mainpage.dox  pubgroups.dox  style.css
doc/texi/: Makefile.am  bootstrap.dia  bootstrap.texi  design.texi  faq.texi  fdl.texi  general_flowchart.dia  hooking.texi  install.texi  intro.texi  lgpl.texi  openinput.texi  parsing.texi  sample.texi  top.texi  version.texi.in
include/: Makefile.am  openinput.h  openinput_action.h  openinput_api.h  openinput_events.h  openinput_h_version.in  openinput_joystick.h  openinput_keyboard.h  openinput_mouse.h  openinput_types.h  sinp.h  sinp_action.h  sinp_api.h  sinp_events.h  sinp_keys.h  sinp_mouse.h  sinp_types.h
nongnu/: KeynameTest.vcproj  OpenCloseTest.vcproj  OpenInput.cbp  OpenInput.dsp  OpenInput.vcproj  OpenInput70.sln  win32-config.h
nongnu/msvc70/: FooTest.vcproj  win32Test.vcproj
nongnu/msvcpp2005/openinput/: openinput.sln  openinput.vcproj
nongnu/msvcpp2005/win32test/: win32test.vcproj
scripts/: archdet.m4  doxygen.m4  utils.m4
src/: Makefile.am  action.c  appstate.c  bootstrap.h  debug.c  device.c  events.c  internal.h  joystick.c  keyboard.c  keynames.c  main.c  mouse.c  private.h  queue.c
src/dx9/: Makefile.am  dx9.c  dx9.h  dx9_events.c  dx9_translate.c
src/foo/: Makefile.am  foo.c  foo.h
src/linuxjoy/: Makefile.am  linuxjoy.c  linuxjoy.h  linuxjoy_devs.h
src/unixsignal/: Makefile.am  unixsignal.c  unixsignal.h
src/win32/: Makefile.am  win32.c  win32.h  win32_events.c  win32_translate.c
src/x11/: Makefile.am  x11.c  x11.h  x11_events.c  x11_translate.c
test/: Makefile.am  footest.c  footest.h  keynametest.c  openclose.c  platform.c  win32test.c  x11actiontest.c  x11test.c
